--- a/j/ju/jum/jumpline.com.html
+++ b/j/ju/jum/jumpline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jumpline.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607034136id_/http%3A//www.jumpline.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jumpline.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206234337id_/http%3A//jumpline.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Jumpline.com VDS Web Hosting • Privacy Policy</title>
@@ -10,13 +10,13 @@
 <body bgcolor="#BBBBBB" text="#000000" leftmargin="5" topmargin="5" marginwidth="5" marginheight="5">
 <table width="769" border="0" cellspacing="0" cellpadding="1" bgcolor="#000000">
   <tbody><tr> 
-    <td> 
-      <table width="748" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF">        <tbody><tr> 
+    <td><table width="748" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF">
+        <tbody><tr> 
           <td colspan="2"><table width="748" border="0" cellspacing="0" cellpadding="0">
-  <tbody><tr><form name="form1" method="post" action="https://ssl.jumpline.com/orderform.html"></form><input type="hidden" name="action" value="Domreg"><input type="hidden" name="stage" value="Intro">
+  <tbody><tr><form name="form1" method="post" action="https://ssl.jumpline.com/orderform.php"></form><!--<input type="hidden" name="action" value="Domreg"><input type="hidden" name="stage" value="Intro">-->
       <td width="602"><img src="images/header/topnav_01.gif" width="602" height="55" border="0" usemap="#Map2"></td>
     <td width="146"><img src="images/header/domainnamesearch.gif" width="117" height="17"><br>
-        <input name="domain" type="text" class="lists" size="14" maxlength="60">
+        <input name="domainNew" type="text" class="lists" size="14" maxlength="60">
        <input type="image" src="images/header/go.gif" alt="GO" width="21" height="14" name="GO" value="Submit" border="0" align="bottom"></td>
   </tr>
   <tr> 
@@ -34,7 +34,7 @@
   <area shape="rect" coords="444,7,484,21" href="faq.php">
   <area shape="rect" coords="488,7,550,21" href="site_map.php">
   <area shape="rect" coords="555,8,633,22" href="contact_us.php">
-  <area shape="rect" coords="657,24,765,45" href="https://ssl.jumpline.com/orderform.html">
+  <area shape="rect" coords="657,24,765,45" href="https://ssl.jumpline.com/orderform.php">
 </map>
 </td>
         </tr>
@@ -45,19 +45,18 @@
         <tr> 
           <td colspan="2"><table width="767" border="0" cellpadding="0" cellspacing="0" background="images/pgBG4.gif" bgcolor="#FFFFFF">
               <tbody><tr> 
-                <td width="162" height="250" rowspan="2" valign="top"><a href="https://my.jumpline.com/" target="_blank"><img src="images/cmLogin.gif" width="162" height="20" border="0"></a><img src="images/phone.gif" width="150" height="45"> 
-                  <div align="center"></div></td>
-                <td height="125" valign="top"> <div align="right"> <img src="images/spacer.gif" width="1" height="25"> 
+                <td width="162" height="125" valign="top"> <a href="https://my.jumpline.com"><img src="images/cmLogin.gif" width="162" height="20" border="0"></a><img src="images/phone.gif" width="150" height="45"> 
+                  <div align="center"> </div></td>
+                <td rowspan="2" valign="top"> <div align="right"> <img src="images/spacer.gif" width="1" height="25"> 
                     <table width="100%" border="0" cellspacing="0" cellpadding="8">
                       <tbody><tr> 
-                        <td width="605" height="400" valign="top"> 
-                          <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                        <td height="400" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
                             <tbody><tr> 
                               <td><div align="right" class="footpath"><a href="index.php">HOME</a></div></td>
                             </tr>
                             <tr> 
                               <td height="24" valign="bottom" class="pageTitle">Privacy 
-                                Policy </td>
+                                Policy</td>
                             </tr>
                             <tr> 
                               <td><span class="bodyContent"><br>
@@ -73,9 +72,8 @@
                                 practices and of the ways in which your information 
                                 may be used. This policy may change from time 
                                 to time, so please check back periodically to 
-                                review this information. This website is not 
-                                directed at children under 18 years of age.</span> 
-                                <p class="bodyContent"><span class="subTitle">The 
+                                review this information. This website is not directed 
+                                at children under 18 years of age.</span> <p class="bodyContent"><span class="subTitle">The 
                                   Information We Collect</span><br>
                                   Jumpline.com may collect personally identifiable 
                                   information from Users in a variety of ways, 
@@ -83,15 +81,15 @@
                                   products and services, and other instances where 
                                   Users are invited to volunteer such information. 
                                   Jumpline.com may also collect information about 
-                                  how Users use our website, for example, by 
-                                  tracking the number of unique views received 
-                                  by the pages of the website or the domains 
-                                  from which Users originate. We may use "cookies" 
-                                  to track how Users use our website. A cookie 
-                                  is a piece of software that a Web server can 
-                                  store on the Users' PC and use to identify the 
-                                  User should they visit the website again. While 
-                                  not all of the information that we collect from 
+                                  how Users use our website, for example, by tracking 
+                                  the number of unique views received by the pages 
+                                  of the website or the domains from which Users 
+                                  originate. We may use "cookies" to 
+                                  track how Users use our website. A cookie is 
+                                  a piece of software that a Web server can store 
+                                  on the Users' PC and use to identify the User 
+                                  should they visit the website again. While not 
+                                  all of the information that we collect from 
                                   Users is personally identifiable, it may be 
                                   associated with personally identifiable information 
                                   that Users provide us through our website.<br>
@@ -126,20 +124,18 @@
                                   <br>
                                   <span class="subTitle">Questions</span><br>
                                   Users may direct questions concerning this Privacy 
-                                  Policy by email to <a href="mailto:privacy@jumpline.com">privacy@jumpline.com</a><br>
-                                </p>
-                                </td>
+                                  Policy by email to <a href="mailto:privacy@jumpline.com">privacy@jumpline.com</a><br><br>
+                                </p></td>
                             </tr>
-                          </tbody></table>
-                          <p align="left" class="bodyContent">&nbsp;</p></td>
+                          </tbody></table></td>
                       </tr>
                     </tbody></table>
-                    <p align="left">&nbsp; </p>
                   </div>
                   <div align="right"></div></td>
               </tr>
               <tr> 
-                <td valign="top">&nbsp;</td>
+                <td width="162" height="125" valign="bottom"><div align="center"><img src="images/usMap.gif" width="140" height="40" border="0" usemap="#states"><br>
+                    &nbsp;</div></td>
               </tr>
             </tbody></table>
             <table width="100%" height="20" border="0" cellpadding="0" cellspacing="0">
@@ -152,12 +148,76 @@
     <td class="footer">&nbsp;&nbsp;<a href="aup.php" class="footer"><font color="#FFFFFF">ACCEPTABLE USE POLICY</font></a> <font color="#FFFFFF">•</font> <a href="privacy_policy.php" class="footer"><font color="#FFFFFF">PRIVACY POLICY</font></a></td>
     <td><div align="right" class="footer">©1997-2004 <b>Jumpline.com</b> All Rights Reserved.&nbsp;</div></td>
   </tr>
-</tbody></table></td>
+</tbody></table>
+  <map name="states" id="states">
+    <area shape="rect" coords="90,13,140,15" href="http://jumpline.com/states/index.php?sp=50">
+    <area shape="rect" coords="92,8,140,10" href="http://jumpline.com/states/index.php?sp=49">
+    <area shape="rect" coords="90,32,139,34" href="http://jumpline.com/states/index.php?sp=48">
+    <area shape="rect" coords="90,34,139,36" href="http://jumpline.com/low_cost_web_hosting/all_pages/7_web_hosting.html">
+    <area shape="rect" coords="45,0,90,1" href="http://jumpline.com/states/index.php?sp=47">
+    <area shape="rect" coords="90,28,139,31" href="http://jumpline.com/states/index.php?sp=46">
+    <area shape="rect" coords="44,21,90,23" href="http://jumpline.com/states/index.php?sp=45">
+    <area shape="rect" coords="44,9,91,11" href="http://jumpline.com/states/index.php?sp=44">
+    <area shape="rect" coords="0,33,44,36" href="http://jumpline.com/states/index.php?sp=43">
+    <area shape="rect" coords="92,4,138,5" href="http://jumpline.com/states/index.php?sp=42">
+    <area shape="rect" coords="0,20,45,22" href="http://jumpline.com/states/index.php?sp=41">
+    <area shape="rect" coords="91,24,140,26" href="http://jumpline.com/states/index.php?sp=40">
+    <area shape="rect" coords="44,25,90,28" href="http://jumpline.com/states/index.php?sp=39">
+    <area shape="rect" coords="91,5,139,7" href="http://jumpline.com/states/index.php?sp=38">
+    <area shape="rect" coords="90,17,140,19" href="http://jumpline.com/states/index.php?sp=37">
+    <area shape="rect" coords="90,15,140,17" href="http://jumpline.com/low_cost_web_hosting/all_pages/9_web_hosting.html">
+    <area shape="rect" coords="91,26,140,28" href="http://jumpline.com/states/index.php?sp=36">
+    <area shape="rect" coords="33,0,33,0" href="http://jumpline.com/states/index.php?sp=35">
+    <area shape="rect" coords="91,2,138,4" href="http://jumpline.com/states/index.php?sp=34">
+    <area shape="rect" coords="91,1,140,2" href="http://jumpline.com/low_cost_web_hosting/all_pages/10_web_hosting.html">
+    <area shape="rect" coords="0,18,45,20" href="http://jumpline.com/states/index.php?sp=33">
+    <area shape="rect" coords="44,17,90,19" href="http://jumpline.com/states/index.php?sp=32">
+    <area shape="rect" coords="45,1,91,3" href="http://jumpline.com/states/index.php?sp=31">
+    <area shape="rect" coords="91,0,138,1" href="http://jumpline.com/states/index.php?sp=30">
+    <area shape="rect" coords="91,22,140,24" href="http://jumpline.com/states/index.php?sp=29">
+    <area shape="rect" coords="0,16,45,18" href="http://jumpline.com/states/index.php?sp=28">
+    <area shape="rect" coords="91,20,140,22" href="http://jumpline.com/states/index.php?sp=27">
+    <area shape="rect" coords="91,19,140,21" href="http://jumpline.com/low_cost_web_hosting/all_pages/8_web_hosting.html">
+    <area shape="rect" coords="0,11,45,13" href="http://jumpline.com/states/index.php?sp=26">
+    <area shape="rect" coords="44,23,91,26" href="http://jumpline.com/states/index.php?sp=25">
+    <area shape="rect" coords="44,15,90,17" href="http://jumpline.com/states/index.php?sp=24">
+    <area shape="rect" coords="0,9,45,11" href="http://jumpline.com/states/index.php?sp=23">
+    <area shape="rect" coords="44,11,90,13" href="http://jumpline.com/states/index.php?sp=22">
+    <area shape="rect" coords="0,22,44,24" href="http://jumpline.com/states/index.php?sp=21">
+    <area shape="rect" coords="93,10,140,12" href="http://jumpline.com/states/index.php?sp=20">
+    <area shape="rect" coords="0,31,44,33" href="http://jumpline.com/states/index.php?sp=19">
+    <area shape="rect" coords="45,32,91,34" href="http://jumpline.com/states/index.php?sp=18">
+    <area shape="rect" coords="0,5,45,7" href="http://jumpline.com/states/index.php?sp=17">
+    <area shape="rect" coords="90,31,139,32" href="http://jumpline.com/states/index.php?sp=16">
+    <area shape="rect" coords="0,7,45,9" href="http://jumpline.com/states/index.php?sp=15">
+    <area shape="rect" coords="0,24,45,26" href="http://jumpline.com/states/index.php?sp=14">
+    <area shape="rect" coords="0,36,44,38" href="http://jumpline.com/states/index.php?sp=13">
+    <area shape="rect" coords="45,3,91,4" href="http://jumpline.com/states/index.php?sp=51">
+    <area shape="rect" coords="0,13,44,16" href="http://jumpline.com/states/index.php?sp=12">
+    <area shape="rect" coords="0,26,45,28" href="http://jumpline.com/states/index.php?sp=11">
+    <area shape="rect" coords="0,28,45,31" href="http://jumpline.com/states/index.php?sp=10">
+    <area shape="rect" coords="44,28,90,31" href="http://jumpline.com/states/index.php?sp=9">
+    <area shape="rect" coords="44,31,90,32" href="http://jumpline.com/states/index.php?sp=8">
+    <area shape="rect" coords="91,12,139,13" href="http://jumpline.com/states/index.php?sp=7">
+    <area shape="rect" coords="45,7,91,9" href="http://jumpline.com/states/index.php?sp=6">
+    <area shape="rect" coords="91,7,140,8" href="http://jumpline.com/states/index.php?sp=5">
+    <area shape="rect" coords="44,19,90,21" href="http://jumpline.com/states/index.php?sp=4">
+    <area shape="rect" coords="45,13,90,15" href="http://jumpline.com/states/index.php?sp=3">
+    <area shape="rect" coords="45,4,91,7" href="http://jumpline.com/states/index.php?sp=2">
+    <area shape="rect" coords="0,3,45,5" href="http://jumpline.com/states/index.php?sp=1">
+    <area shape="rect" coords="0,2,44,3" href="http://jumpline.com/low_cost_web_hosting/all_pages/1_web_hosting.html">
+    <area shape="rect" coords="0,0,44,2" href="http://jumpline.com/low_cost_web_hosting/all_pages/2_web_hosting.html">
+    <area shape="rect" coords="0,37,44,40" href="http://1betterwebhosting.com">
+    <area shape="rect" coords="44,34,91,36" href="http://a1hostingcompany.com">
+    <area shape="rect" coords="45,36,90,38" href="http://jumpline.com/low_cost_web_hosting/all_pages/3_web_hosting.html">
+    <area shape="rect" coords="44,38,90,39" href="http://jumpline.com/low_cost_web_hosting/all_pages/4_web_hosting.html">
+    <area shape="rect" coords="90,38,139,40" href="http://jumpline.com/low_cost_web_hosting/all_pages/5_web_hosting.html">
+    <area shape="rect" coords="90,36,140,38" href="http://jumpline.com/low_cost_web_hosting/all_pages/6_web_hosting.html">
+  </map></td>
               </tr>
             </tbody></table></td>
         </tr>
-      </tbody></table>
-    </td>
+      </tbody></table></td>
   </tr>
 </tbody></table>
 <table width="498" border="0" cellspacing="0" cellpadding="1">
@@ -166,7 +226,7 @@
       <div align="center">
 
 <!-- BEGIN PHP Live! code, copyright OSI Codes Inc. -->
-<style type="text/css"><!-- #surveyDiv {position:absolute; height:1; width:1; top:0; left:0;} --></style><script language="JavaScript" src="http://live.jumpline.com/phplive/web/jumpline/surveys.php?base_url=http://live.jumpline.com/phplive"></script><a href="http://www.phplivesupport.com"></a><script language="JavaScript" src="http://live.jumpline.com/phplive/js/status_image.php?base_url=http://live.jumpline.com/phplive&amp;l=jumpline&amp;x=1&amp;deptid=0&amp;btn=1"></script><div id="surveyDiv" style="visibility:hidden"></div>
+<style type="text/css"><!-- #surveyDiv {position:absolute; height:1; width:1; top:0; left:0;} --></style><script language="JavaScript" src="http://live.jumpline.com/phplive/web/jumpline/surveys.php?base_url=http://live.jumpline.com/phplive"></script><!--<a href="http://www.phplivesupport.com"></a>--><script language="JavaScript" src="http://live.jumpline.com/phplive/js/status_image.php?base_url=http://live.jumpline.com/phplive&amp;l=jumpline&amp;x=1&amp;deptid=0&amp;btn=1"></script><div id="surveyDiv" style="visibility:hidden"></div>
 <!-- END PHP Live! code, copyright OSI Codes Inc. -->
  
   <!--<table width="70%" border="0" cellspacing="0" cellpadding="0">
@@ -189,6 +249,5 @@
   </tr>
 </tbody></table>
 <p>&nbsp;</p>
-
 
 </body></html>
