--- a/r/re/rea/realtyexecutives.com.html
+++ b/r/re/rea/realtyexecutives.com.html
@@ -1,9 +1,25 @@
-<!--The following is the downloaded HTML source of the realtyexecutives.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603094832id_/http%3A//www.realtyexecutives.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realtyexecutives.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206235100id_/http%3A//www.realtyexecutives.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>REALTY EXECUTIVES International</title>
+<meta http-equiv="title" content="REALTY EXECUTIVES International">
+<meta name="description" content="Realty Executives is your source for home buying, home selling, financing and property listings.">
+<meta name="keywords" content="Realty Executive, Realty Executives, realty, realtor, real estate, real estate broker, real estate agent">
+<meta name="robots" content="all">
+<meta name="robots" content="index, follow">
+<meta name="document-state" content="Dynamic">
+<meta name="document-type" content="Web Page">
+<meta name="document-rating" content="General">
+<meta name="document-class" content="Published">
+<meta name="agency" content="www.realtyexecutives.com">
+<meta name="document-distribution" content="Global">
+<meta http-equiv="Content-Language" content="en-us">
+<meta name="graphics, html, css" content="Realty Executives">
+<meta name="document-classification" content="Consumer">
+<meta name="document-rights" content="Copyrighted Work">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
 		</head><body bgcolor="#FFFFFF" text="#000000" link="#000099" vlink="#000099" alink="#000099" topmargin="5" leftmargin="0" marginwidth="0" marginheight="5" onload="preloadImages();CSScriptInit();"><csscriptdict>
 			<script><!--
 CSInit = new Array;
@@ -160,7 +176,7 @@ CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'secure',/*URL*/'http://www.rea
 CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'news',/*URL*/'http://www.realtyexecutives.com/images/border2/newsbut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/newsbut_over.gif',/*URL*/'','');
 CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'contact',/*URL*/'http://www.realtyexecutives.com/images/border2/contactbut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/contactbut_over.gif',/*URL*/'','');
 CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'offices',/*URL*/'http://www.realtyexecutives.com/images/border2/officebut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/officebut_over.gif',/*URL*/'','');
-CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'agents',/*URL*/'http://www.realtyexecutives.com/images/border2/agentbut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/agentbut_over.gif',/*URL*/'','');
+CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'agents',/*URL*/'http://www.realtyexecutives.com/images/border3/agentbut.gif',/*URL*/'http://www.realtyexecutives.com/images/border3/agentbut_over.gif',/*URL*/'','');
 CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'properties',/*URL*/'http://www.realtyexecutives.com/images/border2/propbut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/propbut_over.gif',/*URL*/'','');
 CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'franchising',/*URL*/'http://www.realtyexecutives.com/images/border2/franchisingbut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/franchisingbut_over.gif',/*URL*/'','');
 CSInit[CSInit.length] = new Array(CSILoad,/*CMP*/'espanol',/*URL*/'http://www.realtyexecutives.com/images/border2/languagebut.gif',/*URL*/'http://www.realtyexecutives.com/images/border2/languagebut_over.gif',/*URL*/'','');
@@ -194,7 +210,7 @@ function preloadImages() {
 					<td width="131" valign="top" align="left">
 						<table width="131" border="0" cellpadding="0" cellspacing="0">
 							<tbody><tr height="19">
-								<td width="131" height="19"><csobj w="131" h="19" t="Agents" ht="http://www.realtyexecutives.com/images/border2/agentbut_over.gif"><a href="http://www.realtyexecutives.com/agents/agents.asp" onmouseover="return CSIShow(/*CMP*/'agents',1)" onmouseout="return CSIShow(/*CMP*/'agents',0)" onclick="return CSButtonReturn()"><img src="http://www.realtyexecutives.com/images/border2/agentbut.gif" width="131" height="19" name="agents" border="0"></a></csobj></td>
+								<td width="131" height="19"><csobj w="131" h="19" t="Agents" ht="http://www.realtyexecutives.com/images/border3/agentbut_over.gif"><a href="http://www.realtyexecutives.com/agents/agents.asp" onmouseover="return CSIShow(/*CMP*/'agents',1)" onmouseout="return CSIShow(/*CMP*/'agents',0)" onclick="return CSButtonReturn()"><img src="http://www.realtyexecutives.com/images/border3/agentbut.gif" width="131" height="19" name="agents" border="0"></a></csobj></td>
 							</tr>
 							<tr height="19">
 								<td width="131" height="19"><csobj w="131" h="19" t="Properties" ht="http://www.realtyexecutives.com/images/border2/propbut_over.gif"><a href="http://www.realtyexecutives.com/properties/properties.asp" onmouseover="return CSIShow(/*CMP*/'properties',1)" onmouseout="return CSIShow(/*CMP*/'properties',0)" onclick="return CSButtonReturn()"><img src="http://www.realtyexecutives.com/images/border2/propbut.gif" width="131" height="19" name="properties" border="0"></a></csobj></td>
