--- a/s/si/siu/siue.edu.html
+++ b/s/si/siu/siue.edu.html
@@ -1,22 +1,16 @@
-<!--The following is the downloaded HTML source of the siue.edu privacy policy that was archived on 2004-04-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040411170102id_/http%3A//www.siue.edu/cwis/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the siue.edu privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206235349id_/http%3A//www.siue.edu/cwis/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/cwis01.dwt" codeOutsideHTMLIsLocked="false" --><head>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <!-- InstanceBeginEditable name="Edit Document Title" -->
 
 <title>SIUE Campus Web Privacy Policy</title>
 
 <!-- InstanceEndEditable -->
-
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-
-<meta name="keywords" content="scholarships, siue, siu, southern illinois university, edwardsville, student, college, university, education">
-
-<meta name="description" content="Southern Illinois University is located on 2,600 acres of beautiful rolling hills of trees and lakes. Just 25 minutes from downtown St. Louis...">
-
-<link href="/styles/siue.css" rel="stylesheet" type="text/css">
-
+<meta name="Keywords" content="scholarships, siue, siu, southern illinois university, edwardsville, student, college, university, education">
+<meta name="Description" content="Southern Illinois University is located on 2,600 acres of beautiful rolling hills of trees and lakes. Just 25 minutes from downtown St. Louis...">
+<link href="../styles/siue.css" rel="stylesheet" type="text/css">
 <script language="JavaScript" type="text/javascript">
 
 <!--
@@ -32,53 +26,23 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 //-->
 
 </script>
-
 </head>
-
-
-
 <body>
-
-<table cellpadding="0" cellspacing="5" border="0" align="center" width="100%"><!--DWLayoutTable-->
-
+<table cellpadding="0" cellspacing="5" border="0" align="center" width="100%">
+  <!--DWLayoutTable-->
   <tbody><tr valign="middle">
-
-    <td align="left" width="250">
-
-    	<a href="http://www.siue.edu"><img src="/images_global/logo_250_rbdt.gif" alt="SIUE Logo" width="250" height="57" border="0"></a>
-
-    </td>
-
-     <td align="right" width="100%"> <a href="http://www.siue.edu" class="top">Home</a>
-
-         <span class="mainfoot">-</span> <a href="search.html" class="top">Search</a>
-
-         <span class="mainfoot">-</span> <a href="contact.html" class="top">Contact</a>
-
-		 <br>
-
-      <hr size="1" noshade="">
-
+    <td align="left" width="250"><a href="http://www.siue.edu"><img src="../images_global/logo_250_rbdt.gif" alt="SIUE Logo" width="250" height="57" border="0"></a> </td>
+    <td align="right" width="100%"><a href="http://www.siue.edu" class="top">Home</a> <span class="mainfoot">-</span> <a href="search.html" class="top">Search</a> <span class="mainfoot">-</span> <a href="contact.html" class="top">Contact</a> <br>
+      <hr size="1" noshade="noshade">
       <!-- InstanceBeginEditable name="Edit Content Header" -->
 
     <span class="mainhead">SIUE Campus Web Privacy Policy</span><!-- InstanceEndEditable --></td>
-
   </tr>
-
 </tbody></table>
-
-
-
 <table cellpadding="3" cellspacing="5" border="0" width="100%">
-
   <tbody><tr valign="top">
-
-    <td nowrap="" width="20%" align="left">
-
-	 <p><span class="navsection">Resources
-
-        for</span><br>
-        <a href="http://www.admis.siue.edu/" class="nav">&nbsp;&nbsp;Prospective Students</a><br>
+    <td nowrap="nowrap" width="20%" align="left"><p><span class="navsection">Resources for</span><br>
+        <a href="http://www.admissions.siue.edu/" class="nav">&nbsp;&nbsp;Prospective Students</a><br>
         <a href="cstudents.html" class="nav">&nbsp;&nbsp;Current Students</a><br>
         <a href="parents.html" class="nav"> &nbsp;&nbsp;Parents &amp; Families</a><br>
         <a href="employees.html" class="nav">&nbsp;&nbsp;Employees</a><br>
@@ -86,66 +50,34 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
         <a href="visitors.html" class="nav">&nbsp;&nbsp;Visitors &amp; Community</a><br>
         <a href="media.html" class="nav">&nbsp;&nbsp;Media</a></p>
       <p><span class="navsection">About SIUE</span><br>
-<a href="http://www.siue.edu/cwis/academic.html" class="nav">&nbsp;&nbsp;Academics</a><br>
-  	    <a href="http://www.siue.edu/ATHLETIC/" class="nav">&nbsp;&nbsp;Athletics</a><br>
-        <a href="maps.html" class="nav">&nbsp;&nbsp;Campus Maps</a><br>
-
-        <a href="http://www.admis.siue.edu/tour/" class="nav">&nbsp;&nbsp;Campus Tour</a><br>
-        <a href="/PA/Watch/Watch.htm" class="nav">&nbsp;&nbsp;Watch Us Grow!</a></p>
-
-<p><a href="/ESL/" class="nav">&nbsp;&nbsp;East St. Louis Center</a></p>
-
-        <p><a href="/AQIP/" class="nav">&nbsp;&nbsp;AQIP</a><br>
-
-         <a href="/IRS/factbook.html" class="nav">&nbsp;&nbsp;Fact Book</a><br>
-
-   	    <a href="/CHANCELLOR/" class="nav">&nbsp;&nbsp;From the Chancellor</a><br>
-
-        <a href="/CHANCELLOR/Mission.htm" class="nav">&nbsp;&nbsp;SIUE Mission</a></p>
-
-
-
-        <p><span class="navsection">Campus Events</span><br>
-
+        <a href="http://www.siue.edu/cwis/academic.html" class="nav">&nbsp;&nbsp;Academics</a><br>
+        <a href="http://www.siue.edu/ATHLETIC/" class="nav">&nbsp;&nbsp;Athletics</a><br>
+        <a href="http://www.siue.edu/maps/" class="nav">&nbsp;&nbsp;Campus Maps</a><br>
+        <a href="http://www.admissions.siue.edu/tour/" class="nav">&nbsp;&nbsp;Campus Tour</a><br>
+        <a href="http://www.siue.edu/PA/grow/" class="nav">&nbsp;&nbsp;Watch Us Grow!</a></p>
+      <p><a href="http://www.siue.edu/ESL/" class="nav">&nbsp;&nbsp;East St. Louis Center</a></p>
+      <p><a href="http://www.siue.edu/AQIP/" class="nav">&nbsp;&nbsp;AQIP</a><br>
+        <a href="http://www.siue.edu/IRS/factbook.html" class="nav">&nbsp;&nbsp;Fact Book</a><br>
+        <a href="http://www.siue.edu/CHANCELLOR/" class="nav">&nbsp;&nbsp;From the Chancellor</a><br>
+        <a href="http://www.siue.edu/CHANCELLOR/Mission.htm" class="nav">&nbsp;&nbsp;SIUE Mission</a></p>
+      <p><span class="navsection">Campus Events</span><br>
         <a href="http://www.siue.edu/ARTS_ISSUES/home.html" class="nav">&nbsp;&nbsp;Arts &amp; Issues</a><br>
-
         <a href="http://events.siue.edu/siuevents/" class="nav">&nbsp;&nbsp;SIUEvents</a></p>
-
-
-
-		<p><span class="navsection">Directories</span><br>
-
-       <a href="http://www.library.siue.edu/irs/forms/empfind.html" class="nav">&nbsp;&nbsp;Employees</a><br>
-
-       <a href="http://www.library.siue.edu/irs/forms/stdfind.html" class="nav">&nbsp;&nbsp;Students</a><br>
-
-       <a href="http://www.siue.edu/IRS/dirofc.html" class="nav">&nbsp;&nbsp;Offices</a></p>
-
-
-
+      <p><span class="navsection">Directories</span><br>
+        <a href="http://www.library.siue.edu/irs/forms/empfind.html" class="nav">&nbsp;&nbsp;Employees</a><br>
+        <a href="http://www.library.siue.edu/irs/forms/stdfind.html" class="nav">&nbsp;&nbsp;Students</a><br>
+        <a href="http://www.siue.edu/IRS/dirofc.html" class="nav">&nbsp;&nbsp;Offices</a></p>
       <p><span class="navsection">Online Services</span><br>
-
-	    <a href="http://advisor.siue.edu" class="nav">&nbsp;&nbsp;AdvisorTrac</a><br>
-
-		<a href="http://www.careers.siue.edu/job_search/cougar_jobline.htm" class="nav">&nbsp;&nbsp;Cougar Jobline</a><br>
-
+        <a href="http://advisor.siue.edu" class="nav">&nbsp;&nbsp;AdvisorTrac</a><br>
+        <a href="http://www.careers.siue.edu/job_search/index.htm" class="nav">&nbsp;&nbsp;Cougar Jobline</a><br>
         <a href="http://www.siue.edu/COUGARNET/" class="nav">&nbsp;&nbsp;CougarNet</a><br>
-
         <a href="http://www.siue.edu/e-ID/" class="nav">&nbsp;&nbsp;e-Id</a><br>
-
         <a href="http://www.library.siue.edu/lib/info/" class="nav">&nbsp;&nbsp;Library</a><br>
-
+        <a href="http://spam.siue.edu" class="nav">&nbsp;&nbsp;SPAM E-mail Filter</a><br>
         <a href="http://www.siue.edu/techalert/" class="nav">&nbsp;&nbsp;TechAlert</a><br>
-
         <a href="http://webct.siue.edu/" class="nav">&nbsp;&nbsp;WebCT</a><br>
-
-        <a href="http://webmail.siue.edu/" class="nav">&nbsp;&nbsp;WebMail</a></p>
-
-   	</td>
-
-    <td class="maincontent">
-
-<!-- InstanceBeginEditable name="Edit Page Content" -->
+        <a href="http://webmail.siue.edu/" class="nav">&nbsp;&nbsp;WebMail</a></p></td>
+    <td class="maincontent"><!-- InstanceBeginEditable name="Edit Page Content" -->
 
 It is the policy of Southern Illinois University Edwardsville to respect the privacy of all Web site visitors to the extent permitted by law. 
 SIUE is committed to fully complying with the State Agency Web Site Act (Public Act 093-117) which became effective January 1, 2004. This act restricts the use of "cookies" (small pieces of data stored by a Web browser on a user's computer). Transactional (non-permanent) cookies may be used to facilitate business transactions. Permanent cookies may not be used unless:<p></p>
@@ -179,31 +111,17 @@ SIUE is committed to fully complying with the State Agency Web Site Act (Public 
   official SIUE Web site, you may contact the SIUE Webmaster who will assist
   you in locating the person responsible for that site so that you may make your
   request for that review or change directly with them.</p>
-<!-- InstanceEndEditable --></td>
-
+<!-- InstanceEndEditable --> </td>
   </tr>
-
   <tr>
-
-    <td valign="top" class="navfoot">
-
-		Published
-
-      <!-- #BeginDate format:En2 -->09-Mar-2004<!-- #EndDate --></td>
-
-    <td valign="top" class="mainfoot">Copyright © 2004, Board of Trustees, <a href="http://www.siu.edu/">Southern
-        Illinois University</a><br>
-
+    <td valign="top" class="navfoot"> Published
+      <!-- #BeginDate format:En2 -->02-Dec-2004<!-- #EndDate --></td>
+    <td valign="top" class="mainfoot">Copyright © 2004, Board of Trustees, <a href="http://www.siu.edu/">Southern Illinois University</a><br>
       Southern Illinois University Edwardsville<br>
-
       Edwardsville, Illinois 62026<br>
-
       618-650-2000<br></td>
-
   </tr>
-
 </tbody></table>
 
-
-
-<!-- InstanceEnd --></body></html>
+<!-- InstanceEnd -->
+</body></html>
