--- a/n/na/nat/natinst.com.html
+++ b/n/na/nat/natinst.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the natinst.com privacy policy that was archived on 2004-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040618001652id_/http%3A//ni.com/legal/privacy/unitedstates/us) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the natinst.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207000844id_/http%3A//www.ni.com/legal/privacy/unitedstates/us) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <!-- $Change: 751126 $ $DateTime: 2004/03/17 13:24:42 $ $Revision: #7 $ -->
@@ -40,7 +40,7 @@ function popUp(theURL) {
         <!--NOTES_FORM_TAG1-->
         <td width="593" valign="center" align="right" nowrap="">
           <form name="search" action="http://www.ni.com/cgi-bin/search/search.cgi">
-          <a href="http://www.ni.com/help/" class="global">Site Help</a>&nbsp;|&nbsp;<span class="fineprint">Search</span>&nbsp;<select name="scope" class="fineprint"><option value="site" selected="">Entire Site</option><option value="products">Products &amp; Services</option><option value="solutions">Solutions</option><option value="suppdocs">Support</option><option value="company">Company</option><option value="events">Events</option></select>
+          <a href="http://www.ni.com/help/" class="global">Site Help</a>&nbsp;|&nbsp;<span class="fineprint">Search</span>&nbsp;<select name="scope" class="fineprint"><option value="site" selected="">Entire Site</option><option value="products">Products &amp; Services</option><option value="solutions">Solutions</option><option value="suppdocs">Support</option><option value="DZone">NI Developer Zone</option><option value="company">Company</option><option value="events">Events</option></select>
           <input type="text" name="query" size="16" maxlength="254" class="fineprint">&nbsp;<input type="image" src="/images/buttons/us/search_go.gif" align="top" width="24" height="20" border="0" alt="Search">
           </form>
           <!--NOTES_FORM_TAG2-->
@@ -57,7 +57,7 @@ function popUp(theURL) {
 <area shape="rect" alt="Solutions" coords="300,0,366,20" href="http://www.ni.com/solutions/">
 <area shape="rect" alt="Products &amp; Services" coords="179,0,300,20" href="http://www.ni.com/products/">
 <area shape="rect" alt="Contact NI" coords="90,0,179,20" href="http://sine.ni.com/apps/we/nicc.call_me?p_lang_id=US">
-<area shape="rect" alt="MyNI" coords="0,0,92,20" href="http://my.ni.com/view">
+<area shape="rect" alt="MyNI" coords="0,0,92,20" href="http://my.ni.com/myni/myni">
 </map>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tbody><tr valign="bottom" height="20">
